--- a/src/main/resources/templates/signup.html
+++ b/src/main/resources/templates/signup.html
@@ -7,7 +7,103 @@
 	
 	<body>
 		<section>
-			<h1>This is Signup Page</h1>
+		<div class="container">
+			<div class="row">
+				<div class="col-md-8 offset-md-2">
+					<div class = "my-card mt-1">
+						
+						<div th:if="${session.message}" th:classappend="${session.message.type}" class="alert" role="alert">
+								<p class="text-center" th:text="${session.message.content}"></p>
+								
+								<th:block th:text="${#session.removeAttribute('message')}"></th:block>
+						</div
+
+						
+						<div class="container text-center">
+								<img class="" width="80px" src="" th:src="@{/img/add-friend.png}" alt="currently Unavailable" />
+						</div>
+				
+					<h1 class="text-center">Register Here</h1>
+					
+					<form action="" th:action="@{/do_register}" method="post" th:object="${user}">
+						
+						<!--Name field -->
+						
+						<div class="form-group">
+							
+					    <label for="name_field">Username</label>
+					    <input type="text" class="form-control"
+					    name="name"
+					     id="name_field"
+					      aria-describedby="emailHelp"
+					      placeholder="Enter your Name"
+					      required="required"
+					      th:value="${user.name}" />
+					  </div>
+					  
+					  
+					  <!--email field -->
+						
+						<div class="form-group">
+							
+					    <label for="email_field">Email</label>
+					    <input type="email" class="form-control"
+					      name="email"
+					      id="email_field"
+					      aria-describedby="emailHelp"
+					      placeholder="Enter your email"
+					      required="required"
+					      th:value="${user.email}" />
+					  </div>
+					  
+					  
+					   <!--Password field -->
+						
+						<div class="form-group">
+							
+					    <label for="password_field">Your Password</label>
+					    <input type="password" class="form-control"
+					      name="password"
+					      id="password_field"
+					      aria-describedby="emailHelp"
+					      placeholder="Enter your Password"
+					      required="required" />
+					  </div>
+					  
+				<!--user about field -->
+				<div class="form-group">
+					<textarea
+					  th:value="${user.about}"
+					  placeholder="Enter about yourself" 
+					  rows="6" 
+					  class="form-control"
+					  name="about">
+				  </textarea>
+				</div>
+				
+				
+				<!--Terms and Condition agreement -->
+				<div class="form-group form-check text-center ">
+					<input type="checkbox"
+						name="agreement"
+						class="form-check-input"
+						id="agreement"
+					/>
+					<label for="agreement">Accept Terms And Conditions</label>
+				</div>
+				
+				<div class="container text-center">
+							<button type="submit" class="btn bg-primary">Submit</button>
+
+							<button type="reset" class="btn btn-warning">Reset</button>
+				</div>
+				</div>
+						
+					</form>
+					</div>
+				</div>
+			</div>
+		</div>
 			
 		</section>
 	</body>
