--- a/src/main/resources/templates/signup.html
+++ b/src/main/resources/templates/signup.html
@@ -32,13 +32,19 @@
 						<div class="form-group">
 							
 					    <label for="name_field">Username</label>
-					    <input type="text" class="form-control"
+					    <input type="text" class="form-control
+					    th:classappend="${#fields.hasError('name')?'is-invalid':''}"
 					    name="name"
-					     id="name_field"
+					      id="name_field"
 					      aria-describedby="emailHelp"
 					      placeholder="Enter your Name"
 					      required="required"
 					      th:value="${user.name}" />
+					      
+					       <div class="invalid-feedback" th:each="e:${#fields.errors('name')}" th:text="${e}">
+        			.
+      						</div>
+					      
 					  </div>
 					  
 					  
